Edit page Alignment fixed. and 2nd page of campaign creations design fixed.
Edit page Alignment fixed. and 2nd page of campaign creations design
fixed.

--- a/web-app/css/campaign.css
+++ b/web-app/css/campaign.css
@@ -570,14 +570,6 @@ div.break-div-js{
 	height:80px;
 }
 
-div.edit-perk-space{
-    padding-right: 50px !important;
-}
-
-label.edit-perk-size{
-    width: 220px !important;
-}
-
 .youtubeVideoIframe {
 	width: 236%;
 	height:206px;
